--- a/package.json
+++ b/package.json
@@ -9,6 +9,16 @@
   "author": "Narendra",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.15.3"
-  }
+    "es6-error": "^4.0.2",
+    "express": "^4.15.4",
+    "http-status-codes": "^1.2.0"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.24.1",
+    "babel-core": "^6.25.0",
+    "gulp": "^3.9.1",
+    "gulp-clean": "^0.3.2",
+    "gulp-babel": "^6.1.2",
+    "babel-preset-es2015": "^6.24.1"
+  } 
 }
